# lol-champ-select-recommender

./: .gitignore  EXPERIMENTS.md  README.md  aggregate_matches.py  build_champion_features.py  build_draft_dataset.py  collect_player_stats.py  collect_ranked_matches.py  fetch_matches.py  pyproject.toml  train_draft_model.py  watch.py
docs/: champion_blacklist.example.txt  research-notes.md
src/lol_champ_select_recommender/: __main__.py  aggregate_matches.py  build_champion_features.py  build_draft_dataset.py  champ_select.py  collect_player_stats.py  collect_ranked_matches.py  ddragon.py  env.py  fetch_matches.py  lcu.py  render.py  riot_api.py  roles.py  train_draft_model.py
src/lol_champ_select_recommender/modeling/: __init__.py  draft_data.py  draft_inference.py  draft_model.py  player_pruning.py
tests/: test_aggregate_matches.py  test_champion_features.py  test_draft_inference.py  test_draft_model_data.py  test_main.py  test_player_pruning.py  test_render.py  test_riot_api.py
